Fixed overflow for website editor demo

--- a/packages/website/docs/.vitepress/theme/components/Examples/BlockNote/ReactBlockNote.module.css
+++ b/packages/website/docs/.vitepress/theme/components/Examples/BlockNote/ReactBlockNote.module.css
@@ -1,3 +1,4 @@
 .editor {
+  background: transparent;
   height: 500px;
 }
